# MCPServer

./: .gitignore  README.md  config.txt  main.py  pyproject.toml  requirements.txt  test_api.py
api/: endpoints.py  schema_rag.py
core/: context_loader.py
core/answering/: formatter.py
core/execution/: db_executor.py
core/extraction/: entities.py
core/intent/: detector.py
core/planning/: join_finder.py  sql_planner.py  sql_validator.py
core/selection/: column_selector.py  table_selector.py
data/: database_context.json
docs/: architecture_diagrams.md
models/: request_models.py  response_models.py  types.py
scripts/: check_duplicate_positions.py  check_duplicates.py  dedupe_context_json.py  ingest_schema_to_chroma.py
services/: chroma_repository.py  iterative_analysis_service.py  knowledge_retriever.py  llm_service.py  query_processor.py  schema_provider.py
services/database/: base.py  mssql_service.py  sqlite_service.py
utils/: config_loader.py  logging.py  text_utils.py  time_utils.py
